Add `make` commands to check `www/` and `www-test/` files respect prettier rules

--- a/mithril-client-wasm/www-test/Makefile
+++ b/mithril-client-wasm/www-test/Makefile
@@ -16,3 +16,9 @@ upgrade: clean install
 		webpack@latest \
 		webpack-cli@latest \
 		webpack-dev-server@latest
+
+lint:
+	npm run pretty:check
+
+format:
+	npm run pretty:write
