Remove `.prettierrc` from explorer and move configuration to global level

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,11 @@
 {
-    "overrides": [
-        {
-            "files": "*.js",
-            "options": {
-                "printWidth": 100
-            }
-        }
-    ]
+  "overrides": [
+    {
+      "files": "*.js",
+      "options": {
+        "printWidth": 100,
+        "bracketSameLine": true
+      }
+    }
+  ]
 }
