--- a/.github/workflows/manual-publish-crates.yml
+++ b/.github/workflows/manual-publish-crates.yml
@@ -30,7 +30,8 @@ jobs:
       fail-fast: true
       max-parallel: 1
       matrix:
-        package: [ mithril-stm, mithril-build-script, mithril-common, mithril-client ]
+        package:
+          [mithril-stm, mithril-build-script, mithril-common, mithril-client]
         include:
           - package: mithril-stm
             api_token_secret_name: CRATES_IO_API_TOKEN
