--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 
 on:
   release:
-    types: [ released ]
+    types: [released]
 
 jobs:
   build-push-docker:
@@ -10,12 +10,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        project: [ mithril-aggregator, mithril-client-cli, mithril-signer ]
+        project: [mithril-aggregator, mithril-client-cli, mithril-signer]
 
         include:
           - project: mithril-client-cli
             package: mithril-client
-    
+
     permissions:
       contents: read
       packages: write
@@ -68,7 +68,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment: [ release-preprod, release-mainnet ]
+        environment: [release-preprod, release-mainnet]
         include:
           - environment: release-preprod
             environment_prefix: release
@@ -174,7 +174,8 @@ jobs:
       fail-fast: true
       max-parallel: 1
       matrix:
-        package: [ mithril-stm, mithril-build-script, mithril-common, mithril-client ]
+        package:
+          [mithril-stm, mithril-build-script, mithril-common, mithril-client]
         include:
           - package: mithril-stm
             api_token_secret_name: CRATES_IO_API_TOKEN
@@ -207,7 +208,7 @@ jobs:
       fail-fast: false
       max-parallel: 1
       matrix:
-        package: [ mithril-client-wasm ]
+        package: [mithril-client-wasm]
         include:
           - package: mithril-client-wasm
             scope: mithril-dev
