--- a/mithril-test-lab/mithril-end-to-end/monitor/config/grafana/provisioning/dashboards/dashboard.yml
+++ b/mithril-test-lab/mithril-end-to-end/monitor/config/grafana/provisioning/dashboards/dashboard.yml
@@ -1,11 +1,11 @@
 apiVersion: 1
 
 providers:
-- name: 'Mithril E2E Prometheus'
-  orgId: 1
-  folder: ''
-  type: file
-  disableDeletion: false
-  editable: true
-  options:
-    path: /etc/grafana/provisioning/dashboards
+  - name: "Mithril E2E Prometheus"
+    orgId: 1
+    folder: ""
+    type: file
+    disableDeletion: false
+    editable: true
+    options:
+      path: /etc/grafana/provisioning/dashboards
