--- a/mithril-test-lab/mithril-end-to-end/monitor/config/prometheus/prometheus.yml
+++ b/mithril-test-lab/mithril-end-to-end/monitor/config/prometheus/prometheus.yml
@@ -1,18 +1,16 @@
 global:
-  scrape_interval:     1s 
+  scrape_interval: 1s
   evaluation_interval: 5s
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: "prometheus"
     static_configs:
-    - targets: ['prometheus:9090']
+      - targets: ["prometheus:9090"]
 
-  - job_name: 'node-exporter'
+  - job_name: "node-exporter"
     static_configs:
-    - targets: ['node-exporter:9100']
+      - targets: ["node-exporter:9100"]
 
-  - job_name: 'process-exporter'
+  - job_name: "process-exporter"
     static_configs:
-    - targets: ['process-exporter:9256']
-
-
+      - targets: ["process-exporter:9256"]
