--- a/mithril-infra/assets/docker/docker-compose-signer-verified-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-signer-verified-p2p.yaml
@@ -123,7 +123,7 @@ services:
       - ../data/${NETWORK}/mithril-signer-${SIGNER_ID}/cardano/pool:/mithril-signer-${SIGNER_ID}/cardano/pool
       - ../data/${NETWORK}/mithril-signer-${SIGNER_ID}/cardano/ipc:/ipc
       - ./cardano-configurations/network/${NETWORK}:/config
-    command: [ "-vvv" ]
+    command: ["-vvv"]
     depends_on:
       cardano-node-signer-block-producer:
         condition: service_started
@@ -152,7 +152,7 @@ services:
     ports:
       - "${SIGNER_RELAY_LISTEN_PORT}:${SIGNER_RELAY_LISTEN_PORT}"
       - "${SIGNER_RELAY_SERVER_PORT}:${SIGNER_RELAY_SERVER_PORT}"
-    command: [ "-vvv", "signer" ]
+    command: ["-vvv", "signer"]
     depends_on:
       mithril-signer:
         condition: service_started
@@ -177,10 +177,10 @@ services:
       options:
         tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
     labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.mithril-signer-${SIGNER_ID}.rule=Host(`${SIGNER_HOST}`)'
-      - 'traefik.http.routers.mithril-signer-${SIGNER_ID}.tls=true'
-      - 'traefik.http.routers.mithril-signer-${SIGNER_ID}.tls.certresolver=lets-encrypt'
+      - "traefik.enable=true"
+      - "traefik.http.routers.mithril-signer-${SIGNER_ID}.rule=Host(`${SIGNER_HOST}`)"
+      - "traefik.http.routers.mithril-signer-${SIGNER_ID}.tls=true"
+      - "traefik.http.routers.mithril-signer-${SIGNER_ID}.tls.certresolver=lets-encrypt"
 
 networks:
   default:
