--- a/mithril-infra/assets/docker/docker-compose-aggregator-auth-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-auth-p2p.yaml
@@ -84,7 +84,7 @@ services:
       - ../data/${NETWORK}/mithril-aggregator/cardano/ipc:/ipc
     ports:
       - "8080:8080"
-    command: [ "-vvv", "serve" ]
+    command: ["-vvv", "serve"]
     depends_on:
       cardano-node-aggregator:
         condition: service_started
@@ -93,10 +93,10 @@ services:
       options:
         tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
     labels:
-      - 'traefik.enable=true'
-      - 'traefik.http.routers.mithril-aggregator.rule=Host(`${AGGREGATOR_HOST}`)'
-      - 'traefik.http.routers.mithril-aggregator.tls=true'
-      - 'traefik.http.routers.mithril-aggregator.tls.certresolver=lets-encrypt'
+      - "traefik.enable=true"
+      - "traefik.http.routers.mithril-aggregator.rule=Host(`${AGGREGATOR_HOST}`)"
+      - "traefik.http.routers.mithril-aggregator.tls=true"
+      - "traefik.http.routers.mithril-aggregator.tls.certresolver=lets-encrypt"
       - "traefik.http.routers.mithril-aggregator.middlewares=test-auth"
       - "traefik.http.middlewares.test-auth.basicauth.users=${AUTH_USER_PASSWORD}"
 
@@ -114,7 +114,7 @@ services:
       - AGGREGATOR_ENDPOINT=http://${AGGREGATOR_CREDENTIALS}mithril-aggregator:8080/aggregator
     ports:
       - "${AGGREGATOR_RELAY_LISTEN_PORT}:${AGGREGATOR_RELAY_LISTEN_PORT}"
-    command: [ "-vvv", "aggregator" ]
+    command: ["-vvv", "aggregator"]
     depends_on:
       mithril-aggregator:
         condition: service_started
