--- a/.prettierignore
+++ b/.prettierignore
@@ -1,4 +1,3 @@
-*.json
 docs/website/.docusaurus/
 mithril-explorer/font.css.hbs
 mithril-explorer/out/
@@ -6,3 +5,6 @@ mithril-explorer/.next/
 mithril-explorer/explorer/
 mithril-client-wasm/pkg/
 mithril-test-lab/mithril-devnet/artifacts/
+demo/protocol-demo/artifacts/
+mithril-test-lab/mithril-end-to-end/monitor/config/grafana/provisioning/dashboards/*.json
+mithril-test-lab/mithril-aggregator-fake/default_data/
