--- a/.prettierignore
+++ b/.prettierignore
@@ -8,3 +8,4 @@ mithril-test-lab/mithril-devnet/artifacts/
 demo/protocol-demo/artifacts/
 mithril-test-lab/mithril-end-to-end/monitor/config/grafana/provisioning/dashboards/*.json
 mithril-test-lab/mithril-aggregator-fake/default_data/
+mithril-test-lab/mithril-devnet/configuration/
