--- a/.prettierignore
+++ b/.prettierignore
@@ -9,3 +9,4 @@ demo/protocol-demo/artifacts/
 mithril-test-lab/mithril-end-to-end/monitor/config/grafana/provisioning/dashboards/*.json
 mithril-test-lab/mithril-aggregator-fake/default_data/
 mithril-test-lab/mithril-devnet/configuration/
+flake.lock
