--- a/.github/workflows/test-deploy-network.yml
+++ b/.github/workflows/test-deploy-network.yml
@@ -61,7 +61,9 @@ jobs:
             google_zone: europe-west1-b
             google_machine_type: e2-highmem-4
             google_compute_instance_boot_disk_size: 200
+            google_compute_instance_boot_disk_type: pd-standard
             google_compute_instance_data_disk_size: 250
+            google_compute_instance_data_disk_type: pd-standard
           - environment: testing-mainnet
             environment_prefix: testing
             cardano_network: mainnet
@@ -86,7 +88,9 @@ jobs:
             google_zone: europe-west1-b
             google_machine_type: e2-highmem-8
             google_compute_instance_boot_disk_size: 250
+            google_compute_instance_boot_disk_type: pd-standard
             google_compute_instance_data_disk_size: 1000
+            google_compute_instance_data_disk_type: pd-standard
 
     environment: ${{ matrix.environment }}
     runs-on: ubuntu-22.04
@@ -113,7 +117,10 @@ jobs:
           google_zone: ${{ matrix.google_zone }}
           google_machine_type: ${{ matrix.google_machine_type }}
           google_compute_instance_boot_disk_size: ${{ matrix.google_compute_instance_boot_disk_size }}
+          google_compute_instance_boot_disk_type: ${{ matrix.google_compute_instance_boot_disk_type }}
           google_compute_instance_data_disk_size: ${{ matrix.google_compute_instance_data_disk_size }}
+          google_compute_instance_data_disk_type: ${{ matrix.google_compute_instance_data_disk_type }}
+          google_compute_instance_data_disk_snapshot: ${{ vars.GOOGLE_COMPUTE_INSTANCE_DATA_DISK_SNAPSHOT }}
           google_application_credentials: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           mithril_use_p2p_network: ${{ matrix.mithril_use_p2p_network }}
           mithril_api_domain: ${{ matrix.mithril_api_domain }}
