--- a/mithril-infra/assets/docker/prometheus/prometheus-base.yml
+++ b/mithril-infra/assets/docker/prometheus/prometheus-base.yml
@@ -19,6 +19,10 @@ scrape_configs:
     static_configs:
       - targets: ["node-exporter:9100"]
 
+  - job_name: "process-exporter"
+    static_configs:
+      - targets: ["process-exporter:9256"]
+
   - job_name: "reverse-proxy"
     static_configs:
       - targets: ["reverse-proxy:8080"]
