--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -47,6 +47,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "serde_enabled",
     "sk_clone_enabled",
 ] }
+mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false }
 nom = "7.1.3"
 pallas-addresses = { version = "0.29.0", optional = true }
 pallas-codec = { version = "0.29.0", optional = true }
@@ -73,21 +74,7 @@ typetag = "0.2.15"
 walkdir = "2.4.0"
 warp = { version = "0.3.6", optional = true }
 
-[target.'cfg(target_family = "unix")'.dependencies]
-# only unix supports the default rug backend
-mithril-stm = { path = "../mithril-stm", version = "0.3" }
-
-[target.'cfg(windows)'.dependencies]
-# Windows doesn't support rug backend, fallback to num-integer
-mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false, features = [
-    "num-integer-backend",
-] }
-
 [target.'cfg(target_family = "wasm")'.dependencies]
-# WASM doesn't support rug backend, fallback to num-integer
-mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false, features = [
-    "num-integer-backend",
-] }
 wasm-bindgen = "0.2.90"
 
 [dev-dependencies]
@@ -105,7 +92,7 @@ tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
 mithril-build-script = { path = "../internal/mithril-build-script", version = "=0.2" }
 
 [features]
-default = []
+default = ["rug-backend"]
 
 # Full feature set
 full = ["random", "fs", "test_tools"]
@@ -120,6 +107,12 @@ fs = [
     "dep:pallas-primitives",
     "dep:pallas-traverse",
 ]
+
+# Enables `rug-backend` features for `mithril-stm` dependency
+rug-backend = ["mithril-stm/rug-backend"]
+# Enables `num-integer-backend` features for `mithril-stm` dependency
+# by default it's `rug-backend`
+num-integer-backend = ["mithril-stm/num-integer-backend"]
 
 # Disable signer certification, to be used only for tests
 allow_skip_signer_certification = []
