--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -56,6 +56,7 @@ mockall = "0.13.0"
 prometheus-parse = "0.2.5"
 slog-scope = "4.4.0"
 slog-term = "2.9.1"
+warp = "0.3.7"
 
 [features]
 default = ["jemallocator"]
