Add missing Docusaurus build dir in `.prettierignore`

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,6 @@
 demo/protocol-demo/artifacts/
 docs/website/.docusaurus/
+docs/website/build/
 mithril-client-wasm/pkg/
 mithril-explorer/font.css.hbs
 mithril-explorer/out/
