setting benchmark path
without benchmark path being stated the mythical docker image fails to build

--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -11,6 +11,7 @@ repository = { workspace = true }
 
 [[bench]]
 name = "mktree_store_sqlite"
+path = "benches/mktree_store_sqlite.rs"
 harness = false
 
 [dependencies]
