fix: swagger build step failing in CI
Due to missing 'GITHUB_TOKEN' which is now required.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -841,6 +841,7 @@ jobs:
         with:
           output: out/
           spec-file: ./openapi.yaml
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish OpenAPI UI build
         uses: actions/upload-artifact@v4
