--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -289,9 +289,9 @@ jobs:
       matrix:
         mode: ["std"]
         era: ${{ fromJSON(needs.build-ubuntu-X64.outputs.eras) }}
-        cardano_node_version: ["9.0.0", "9.1.0", "9.1.1"]
+        cardano_node_version: ["9.0.0", "9.1.0", "9.1.1", "9.2.0", "9.2.1"]
         hard_fork_latest_era_at_epoch: [0]
-        run_id: ["#1", "#2"]
+        run_id: ["#1"]
         extra_args: [""]
 
         include:
